Add solutions for days 3 and 4

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,13 +13,7 @@
 				"denoland.vscode-deno"
 			],
 			"settings": {
-				"terminal.integrated.defaultProfile.linux": "bash",
-				"deno.enable": true,
-				"deno.lint": true,
-				"editor.formatOnSave": true,
-				"[typescript]": {
-					"editor.defaultFormatter": "denoland.vscode-deno"
-				}
+				"terminal.integrated.defaultProfile.linux": "bash"
 			}
 		}
 	}
